Logtalk/examples/errors/ccredef.lgt

:- object(ccredef).

	% Logtalk built-in control constructs cannot be redefined
	::(_).

:- end_object.
